tests/fail/functionDidNotReturn.llcl
/*
error: function did not return
8  |
9  |fn main(): Void {
       ^^^^ the compiler cannot guarantee that function 'main' returns
10 |
*/

fn main(): Void {

}